# Work_hours_app_tracker

./: CMakeLists.txt  Main.qml  MainWindow.h  README.md  Readme.md  counter.cpp  main.cpp  mainwindow.cpp  monthdata.cpp  statdataPopup.qml
